<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="20dp"
    android:layout_centerInParent="false"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="false">

    <data>
        <variable
            name="viewModel"
            type="com.example.abc_jobs_alpaca.viewmodel.ExamTakeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@android:style/Widget.ScrollView"
            android:scrollbarStyle="insideInset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/questionTitleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/question_label"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="12dp"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/leaveButton"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/leave_button_label" />
                </LinearLayout>

                <TextView
                    android:id="@+id/questionBodyTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/answerTitleTextView"
                                android:layout_width="179dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/option1_label"
                                tools:text="@string/option1_label" />

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />

                            <TextView
                                android:id="@+id/idOptionTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:visibility="invisible" />

                            <RadioButton
                                android:id="@+id/radioButton"
                                android:layout_width="4dp"
                                android:layout_height="30dp"
                                android:layout_weight="1" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/answerTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/answer2TitleTextView"
                                android:layout_width="179dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/option2_label"
                                tools:text="@string/option2_label" />

                            <Space
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />

                            <TextView
                                android:id="@+id/idOptionTextView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:visibility="invisible" />

                            <RadioButton
                                android:id="@+id/radioButton2"
                                android:layout_width="4dp"
                                android:layout_height="30dp"
                                android:layout_weight="1" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/answer2TextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/answer3TitleTextView"
                                    android:layout_width="179dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/option3_label"
                                    tools:text="@string/option3_label" />

                                <Space
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1" />

                                <TextView
                                    android:id="@+id/idOptionTextView3"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:visibility="invisible" />

                                <RadioButton
                                    android:id="@+id/radioButton3"
                                    android:layout_width="4dp"
                                    android:layout_height="30dp"
                                    android:layout_weight="1" />
                            </LinearLayout>

                            <TextView
                                android:id="@+id/answer3TextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/answer4TitleTextView"
                                    android:layout_width="179dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/option4_label"
                                    tools:text="@string/option4_label" />

                                <Space
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1" />

                                <TextView
                                    android:id="@+id/idOptionTextView4"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:visibility="invisible" />

                                <RadioButton
                                    android:id="@+id/radioButton4"
                                    android:layout_width="4dp"
                                    android:layout_height="30dp"
                                    android:layout_weight="1" />
                            </LinearLayout>

                            <TextView
                                android:id="@+id/answer4TextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layoutDirection="rtl"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/submitButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/rounded_layout_background"
                        android:text="@string/submit_button_label"
                        android:textColor="@color/accent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.58"
                        />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>